# spicy

./: .cursorignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  clippy.toml  rust-toolchain.toml  simple_resistor.spicy
crates/spicy_cli/: Cargo.toml  README.md
crates/spicy_cli/src/: main.rs
crates/spicy_cli/src/tui/: app.rs  graph.rs  input.rs  mod.rs  nvim.rs  run.rs  term.rs  ui.rs  worker.rs
crates/spicy_cli/src/tui/ui/: help.rs  (+5 more)
crates/spicy_simulate/: Cargo.toml  README.md
crates/spicy_simulate/benches/: klu_analyze.rs
crates/spicy_simulate/src/: ac.rs  dc.rs  error.rs  lib.rs  matrix.rs  nodes.rs  raw_writer.rs  setup_pattern.rs  trans.rs  union_find.rs  util.rs
crates/spicy_simulate/src/devices/: bjt.rs  capacitor.rs  diode.rs  inductor.rs  mod.rs  resistor.rs  sources.rs  stamp.rs
crates/spicy_simulate/src/snapshots/: spicy_simulate__tests__simulate-ac-simple_rc_high_pass.snap  spicy_simulate__tests__simulate-ac-simple_rc_low_pass.snap  spicy_simulate__tests__simulate-ac-simple_rl_high_pass.snap  spicy_simulate__tests__simulate-dc-simple_inductor_capacitor.snap  spicy_simulate__tests__simulate-dc-simple_inductor_capacitor.snap.new  spicy_simulate__tests__simulate-dc-simple_resistor.snap  spicy_simulate__tests__simulate-dc-simple_resistor.snap.new  spicy_simulate__tests__simulate-dc-simple_voltage_source.snap  spicy_simulate__tests__simulate-dc-simple_voltage_source.snap.new  spicy_simulate__tests__simulate-op-bjt_op.snap  spicy_simulate__tests__simulate-op-diode_op.snap  spicy_simulate__tests__simulate-op-rc_charging.snap  spicy_simulate__tests__simulate-op-simple_inductor_capacitor.snap  spicy_simulate__tests__simulate-op-simple_inductor_capacitor.snap.new  spicy_simulate__tests__simulate-op-simple_rc_low_pass.snap  spicy_simulate__tests__simulate-op-simple_resistor.snap  spicy_simulate__tests__simulate-op-simple_resistor.snap.new  spicy_simulate__tests__simulate-op-simple_rl_high_pass.snap  spicy_simulate__tests__simulate-op-simple_voltage_source.snap  spicy_simulate__tests__simulate-op-simple_voltage_source.snap.new  (+7 more)
crates/spicy_simulate/tests/: rc_charging.sicy  simple_inductor_capacitor.spicy  simple_rc_high_pass.spicy  simple_rc_low_pass.spicy  simple_rl_high_pass.spicy  simple_voltage_source.spicy  sinusoidal_voltage_source.spicy
fuzz/: Cargo.toml
fuzz/fuzz_targets/: spicy_parser.rs
visualizations/btf_viz/: Cargo.toml  README.md
visualizations/btf_viz/src/: main.rs
(+173 files in other folders)
