[package]
name = "spicy_simulate"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
spicy_parser = { path = "../spicy_parser" }
thiserror = "2.0.16"
# Use system OpenBLAS to avoid building static OpenBLAS locally
ndarray-linalg = { version = "0.17", features = ["openblas-system"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
debug = true

[dev-dependencies]
rstest = "0.23.0"
insta = "1.42.1"
