[package]
name = "btf_viz"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17"
bevy_egui = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bevy_prototype_lyon = { version = "0.12", optional = true }
egui_extras = { version = "0.33", features = ["syntect"] }
spicy_simulate = { path = "../../crates/spicy_simulate" }

[features]
default = []
lyon = ["bevy_prototype_lyon"]


